Noteworthy changes in version 2.0.0 (unreleased)
-------------------------------------------------

 * First separate release of QGpgME.


Noteworthy changes in earlier versions can be found in the NEWS file of
gpgme.


 Copyright 2024 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.