@@ -62,7 +62,7 @@ unset(_expectedTargets)
 add_library(QGpgmeQt6 SHARED IMPORTED)
 
 set_target_properties(QGpgmeQt6 PROPERTIES
-  INTERFACE_INCLUDE_DIRECTORIES "@resolved_includedir@/qgpgme;@resolved_includedir@"
+  INTERFACE_INCLUDE_DIRECTORIES "@resolved_includedir@"
   INTERFACE_LINK_LIBRARIES "Gpgmepp;Qt6::Core"
   IMPORTED_LOCATION "@resolved_libdir@/libqgpgmeqt6@libsuffix@"
 )
